--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.RandonProjet"
         tools:targetApi="31">
         <activity
-            android:name="MainActivity"
+            android:name=".BusinessCardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FiltroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
