--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.RandonProjet"
         tools:targetApi="31">
         <activity
+            android:name=".ResultadoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SurpresaActivity"
+            android:exported="false" />
+        <activity
             android:name=".BusinessCardActivity"
             android:exported="false" />
         <activity
